--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -764,8 +764,10 @@ The real challenge there was to design it in a way that would not become trouble
 One of the notable changes in the schema involved attributes.
 It originally exported its value as a string, which made traversing
 its inner tags in lints not possible. 
-Because of this we had to introduce a breaking change there
-and adjust the existing lints, making it more future-proof.
+The solution was to refactor it into a proper tree structure.
+This meant that we had to introduce a breaking change there
+and do minor adjustments the existing lints, 
+making it more future-proof this time.
 % https://github.com/obi1kenobi/cargo-semver-checks/pull/171
 
 \section{Command-line interface improvements}\label{r:section_cli}
