--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -744,7 +744,7 @@ be run using Node.js and implement the V2 version in TypeScript. It is a standar
 of creating complex actions, as it has multiple advantages:
 \begin{itemize}
 	\item TypeScript action is platform-independent and can be run on all runners supported by GitHub Actions.
-	\item Using Node.js makes it possible to depend on variety of npm packages, in particular the GitHub Actions
+	\item Using Node.js makes it possible to depend on variety of \texttt{npm} packages, in particular the GitHub Actions
 		Toolkit \cite{github_actions_toolkit}, instead of building the components from scratch.
 	\item TypeScript code is more readable and easier to organize than a bash script or a GitHub workflow file.
 \end{itemize}
@@ -773,9 +773,9 @@ Moreover, the action now includes several optimizations of the running time:
 		\cite{crates_io_sparse_protocol}.
 \end{itemize}
 
-Along with the new version of the action we also developed an extensive suite of action tests
+Along with the new version of the action, we also developed an extensive suite of action tests
 (not to be confused with the test suite of cargo-semver-checks). The current CI workflow
-of the project consists of over 30 checks, which are:
+of the project consists of over 30 checks, which are responsible for:
 \begin{itemize}
 	\item making sure the action's code is properly formatted and builds without errors and warnings,
 	\item running the unit tests,
