--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -739,7 +739,7 @@ was pointed out by the users who often decided to setup the tool manually for th
 Finally, the action was implemented as a bash script, which made it difficult to maintain
 and runnable only on Linux hosts.
 
-The need for a redesign was clear, so we decided to use the fact that a GitHub action might
+The need for a redesign was therefore clear. After reviewing the available options we decided to use the fact that a GitHub action might
 be run using Node.js and implement the V2 version in TypeScript. It is a standard way
 of creating complex actions, as it has multiple advantages:
 \begin{itemize}
