--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -779,7 +779,7 @@ of the project consists of over 30 checks, which are responsible for:
 \begin{itemize}
 	\item making sure the action's code is properly formatted and builds without errors and warnings,
 	\item running the unit tests,
-	\item veryfying whether the action works on Linux, Windows and macOS with different versions of
+	\item verifying whether the action works on Linux, Windows and macOS with different versions of
 		Rust installed,
 	\item testing all of the action's inputs by running it on a test repository,
 	\item comparing the cache created by the action with the expected one.
