--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -989,7 +989,7 @@ During the research that we conducted in chapter \ref{r:chapter_results_popular_
 the tool has proven its reliability in varying conditions of the most popular Rust packages,
 furthermore reaffirming the value and benefits it has to offer the developers.
 
-After all of our contributions the tool's ultimate goal of becoming a built-in feature of cargo
+After all of our contributions, the tool's ultimate goal of becoming a built-in feature of cargo
 seems closer than it has ever been before. More and more users decide to add the tool to their
 production processes. Moreover, it is not only the packages' maintainers, but also all of
 the packages' dependants who profit from the tool's presence in the crate's repository. Thus its
