--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -999,8 +999,8 @@ using it may tell.
 In conclusion, the final outcome of our work has been an order of magnitude greater than
 we expected. Already since the early days of our contributions we could see the constant increase
 in the tool's usage as it was growing to its current, well-estabilished position in the world
-of Rust. With that we firmly believe that its future is bright and are happy to see it making
-such an impact already, hoping to soon allow everyone to be fearless about running
+of Rust. With that, we firmly believe that its future is bright and are happy to already see it
+making such an impact, hoping to soon allow everyone to be fearless about running
 \texttt{cargo update} on their projects.
 
 \section{Rust community's positive response to the tool}\label{r:section_community_response}
