--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -994,7 +994,7 @@ seems closer than it has ever been before. More and more users decide to add the
 production processes. Moreover, it is not only the packages' maintainers, but also all of
 the packages' dependants who profit from the tool's presence in the crate's repository. Thus its
 actual impact and the group of beneficiaries are much greater than the number of repositories
-using it may tell.
+using it may suggest.
 
 In conclusion, the final outcome of our work has been an order of magnitude greater than
 we expected. Already since the early days of our contributions we could see the constant increase
