--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -787,7 +787,7 @@ in both human-readable and machine-readable form.
 All of the results (both true-positives and false-positives / bugs) are provided
 in a human-readable form.
 
-\section{Generating witnesses}\label{r:section_generating_witnesses}
+\section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
 Because cargo-semver-checks is able to create a rustdoc
 from the registry of a particular crate and version,
