--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -841,7 +841,7 @@ Mostly we verified whether an item was indeed a part of the public API
 (not below a \say{doc hidden} and not a part of a test module).
 With that, we have high confidence that the found items are indeed true-positives.
 
-\section{Witness generation}\label{r:witness_generation}
+\section{Generating witnesses}\label{r:section_generating_witnesses}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                Team                 %
