--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -807,7 +807,7 @@ The results (which take several days to generate) are saved to a CSV file.
 Unfortunately, cargo-semver-checks is not yet perfect and sometimes produces false-positives
 that are to be fixed. However, most of them were caused by one of the two cases:
 \begin{itemize}
-	\item an item had a \texttt{\#[doc(hidden)]} macro,
+	\item an item was marked with the \texttt{\#[doc(hidden)]} attribute,
 		which hides it from the documentation and thus is not part
 		of the public API accessible by the user
 		(\texttt{\#[doc(hidden)]} is most often used by macros to hide their generated code
