--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -830,7 +830,7 @@ We came up with two solutions:
 		containing the hidden items and another one without the hidden items,
 		parsing the output to know which items were removed.
 	\item As a way to know whether a reported item is a false-positive or a true-positive,
-		we created a witness (more on that in secion \ref{r:witness_generation})
+		we created a witness (more on that in section \ref{r:witness_generation})
 		and ignored all items whose witnesses compile on both baseline and current versions.
 \end{itemize}
 
