--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -736,7 +736,7 @@ installed both the Rust toolchain and the tool itself. However, it downloaded th
 the repository instead of using the latest release published on crates.io and did not handle the edge cases
 properly. The other problem was that the action did not allow passing any parameters to the tool, which
 was pointed out by the users who often decided to setup the tool manually for this reason.
-Finally, the action was implemented as a bash script, which made it difficult to maintain
+Finally, the action was implemented as a bash script, which made it both difficult to maintain
 and runnable only on Linux hosts.
 
 The need for a redesign was therefore clear. After reviewing the available options,
