--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -760,7 +760,7 @@ Rust team responsible for developing rustdoc.
 Thus they decided to adapt ours in their testsuite
 (by running the tool's tests on their newest versions of rustdocs) \cite{issue-rustdoc-our-tests}.
 
-We also wrote a new kind of tests to ensure that some bugs found by us or reported by the users have been fixed.
+We also wrote a new kind of test to ensure that some bugs found by us or reported by the users have been fixed.
 Such tests were made by writing GitHub workflow jobs (which are triggered by every
 commit and Pull Request) that downloads the tool and the user's git repository,
 runs the tool just like the user did to detect the bug
