--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -988,6 +988,67 @@ TODO:
 
 \section{Rust community's positive response to the tool}\label{r:section_community_response}
 
+The Rust community has shown great interest in using the tool -- as of May 2023,
+cargo-semver-checks has over 63 000 downloads from the crates.io registry \cite{downloads-total}.
+This number can be split down into three components:
+\begin{itemize}
+	\item over 22 900 downloads before we started contributing to the project (period of 5 months),
+	\item over 32 700 downloads during our contribution, before the release of pre-built executable
+		binaries (period of 3 months)
+	\item over 7 400 downloads during our contribution, after the release of pre-built executable
+		binaries (period of 3 months)
+\end{itemize}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{crates-io-downloads-total.png}
+	\caption{cargo-semver-checks on crates.io, May 2023}
+\end{figure}
+The release of binaries was a big change for how the tool is used and had its effect on
+the project's downloads, too. Originally a repository using cargo-semver-checks would most often
+download the same version multiple times, for example every time a CI run took place the tool
+would be downloaded from crates.io and built locally from scratch. This resulted in a big variation
+of downloads per release, depending on factors such as how long it has been since the most
+recent one. However, with pre-builds now available, most projects download the newest version
+of the tool only once, add the binaries to their repository and use them instead. This has lowered
+the average downloads of cargo-semver-checks, but by no means decreased the tool's popularity --
+quite the contrary, as the current number of over 2 000 downloads per release better reflects
+how many repositories actively use cargo-semver-checks.
+
+Another measure of cargo-semver-checks' recognition among the community are GitHub stars.
+Every user can star any number of repositories they like, whereas they want to show
+their appreciation of one's project or just bookmark it for easier finding in the future.
+When we started working on the tool in October 2022 it had just over 200 stars.
+7 months have passed and after our contributions the star count has almost doubled,
+reaching above 400.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.75\linewidth]{github-star-history-graph.png}
+	\caption{cargo-semver-checks star history as of May 2023}
+\end{figure}
+
+There are multiple reasons behind this great increase in cargo-semver-checks popularity. While it
+is impossible to point out a single, main factor, there are several (with no specific order) that
+resulted in the tool's undoubtful success:
+\begin{itemize}
+	\item regular implementation of new lints that increased the tool's effectiveness,
+	\item introduction of the pre-built executable binaries with their convenience of use,
+	\item release and improvements of the GitHub action for continuous integration,
+	\item numerous optimalizations of the tool's performance (done both by us in
+		cargo-semver-checks and by our mentor in the trustfall engine),
+	\item staying in touch with the tool's users and addressing their requests and suggestions,
+	\item regular tweets and blog posts by our mentor, giving the community insight into our work
+		as well as announcements of upcoming features before new releases.
+\end{itemize}
+
+Sometimes the feedback we received from the tool's users was not just limited to a single comment
+-- there were cases where after our response users would share some useful
+knowledge or even help with implementing the features they initially asked for. A great example
+comes from a user who was just wondering whether we could do something to make the tool run faster
+in continuous integration \cite{make-ci-runs-faster}. Shortly after learning more about our active
+goals regarding performance at that time, he decided to do some useful research himself
+and provided us with its helpful results. What is more, he was so excited about the possible
+improvements that he decided to contribute and implemented them \cite{user-contribution-1}.
+
 TODO:
 \begin{itemize}
 	\item show how the number of downloads has changed
@@ -1159,6 +1220,21 @@ TODO:
 \bibitem{responsibilities-bartosz} GitHub,
 	\textit{Contributions authored by Bartosz} (2023) \\
 	\url{https://github.com/search?o=desc&q=org%3Aobi1kenobi+author%3ASmolSir&s=updated&type=Issues}
+
+
+%%% section 8.2 links
+
+\bibitem{downloads-total} crates.io,
+	\textit{cargo-semver-checks on crates.io} (2023) \\
+	\url{https://crates.io/crates/cargo-semver-checks}
+
+\bibitem{make-ci-runs-faster} GitHub,
+	\textit{Make CI runs faster} (2023) \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks/issues/214}
+
+\bibitem{user-contribution-1} GitHub,
+	\textit{Cache generated rustdoc for registry baselines} \\
+	\url{https://github.com/obi1kenobi/cargo-semver-checks/pull/339}
 
 \end{thebibliography}
 
