--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -753,12 +753,12 @@ available crate pairs. This has brought numerous benefits:
 		(e.g. when the code introduced an item in \say{current}
 		that was then removed in \say{baseline}).
 \end{itemize}
-What is more, because those tests are also good for testing the JSON rustdocs
-(they check a variety of rustdocs and lots of different kinds of items),
-we have developed more extensive ones than the
-Rust team responsible for developing rustdoc.
-Thus they decided to adapt ours in their testsuite
-(by running the tool's tests on their newest versions of rustdocs) \cite{issue-rustdoc-our-tests}.
+In the process of making the test suite more thorough,
+we discovered a variety of edge cases in the underlying rustdoc tool,
+which is part of the Rust toolchain and is also under active development.
+Since our work made our tests quite extensive,
+the rustdoc team is working on ways to integrate our test suite into rustdoc's own,
+by re-running our tests on new rustdoc versions \cite{issue-rustdoc-our-tests}.
 
 We also wrote a new kind of test to ensure that some bugs found by us or reported by the users have been fixed.
 Such tests were made by writing GitHub workflow jobs (which are triggered by every
