--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -532,12 +532,6 @@ which often prevented the community from adopting the tool into their workflow:
 
 \section{Project structure}\label{r:section_project_structure}
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=\linewidth]{project-structure-diagram.png}
-	\caption{Diagram of the project structure}
-\end{figure}
-
 In order to check two versions of a crate for semver violations, the tool needs a consistent method
 for generating the data to be compared. This is achieved by using rustdoc (from the official
 Rust toolchain) to generate the documentation for Rust projects. However, the documentation itself
@@ -556,7 +550,7 @@ are called \texttt{lints} inside the project (more detail in section
 Despite being the project's core component, new lints are not the only thing we developed. In total
 there are four repositories that we have been actively contributing to for the last few months:
 \begin{itemize}
-	\item \textbf{cargo-semver-checks} -- a CLI (Command Line Interface) tool that runs the lints
+	\item \textbf{cargo-semver-checks} -- a CLI (Command-line Interface) tool that runs the lints
 		(Trustfall queries),
 	\item \textbf{trustfall-rustdoc-adapter} -- implements the Trustfall interface for one specific
 		rustdoc version,
@@ -564,6 +558,29 @@ there are four repositories that we have been actively contributing to for the l
 		the currently used rustdoc version,
 	\item \textbf{cargo-semver-checks-action} -- the tool in form of a GitHub Action that can
 	    be added to GitHub repositories.
+\end{itemize}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{project-structure-diagram.png}
+	\caption{Diagram of the project structure.}
+\end{figure}
+
+% TODO -- merge this as-is, I will add the ref-links in a separate PR once this is part of main so
+%		  that they will actually work in the PR.
+
+To learn more about the project's individual components present in the diagram, see:
+\begin{itemize}
+	\item cargo-semver-checks -- chapters \ref{r:chapter_vision} and \ref{r:chapter_implementation},
+	\item lints -- section \ref{},
+	\item Command-line interface -- section \ref{},
+	\item cargo-semver-checks-action -- section \ref{},
+	\item cargo -- section \ref{},
+	\item crates.io -- section \ref{},
+	\item rustdoc -- section \ref{},
+	\item trustfall -- section \ref{},
+	\item trustfall-rustdoc-adapter -- section \ref{},
+	\item trustfall-rustdoc -- section \ref{},
 \end{itemize}
 
 \section{cargo-semver-checks}\label{r:section_cargo_semver_checks}
