--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -624,6 +624,8 @@ the following fields:
 	    its exact position in the code.
 \end{itemize}
 
+% TODO -- depending on the final layout, it may be worth it to cut this image in half.
+
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{lint-example.png}
