--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -550,7 +550,7 @@ are called \texttt{lints} inside the project (more detail in section
 Despite being the project's core component, new lints are not the only thing we developed. In total
 there are four repositories that we have been actively contributing to for the last few months:
 \begin{itemize}
-	\item \textbf{cargo-semver-checks} -- a CLI (Command-line Interface) tool that runs the lints
+	\item \textbf{cargo-semver-checks} -- a CLI (command-line interface) tool that runs the lints
 		(Trustfall queries),
 	\item \textbf{trustfall-rustdoc-adapter} -- implements the Trustfall interface for one specific
 		rustdoc version,
@@ -573,14 +573,14 @@ To learn more about the project's individual components present in the diagram, 
 \begin{itemize}
 	\item cargo-semver-checks -- chapters \ref{r:chapter_vision} and \ref{r:chapter_implementation},
 	\item lints -- section \ref{},
-	\item Command-line interface -- section \ref{},
+	\item command-line interface -- section \ref{},
 	\item cargo-semver-checks-action -- section \ref{},
 	\item cargo -- section \ref{},
 	\item crates.io -- section \ref{},
 	\item rustdoc -- section \ref{},
 	\item trustfall -- section \ref{},
 	\item trustfall-rustdoc-adapter -- section \ref{},
-	\item trustfall-rustdoc -- section \ref{},
+	\item trustfall-rustdoc -- section \ref{}.
 \end{itemize}
 
 \section{cargo-semver-checks}\label{r:section_cargo_semver_checks}
