--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -843,7 +843,7 @@ With that, we have high confidence that the found items are indeed true-positive
 
 \section{Generating witnesses}\label{r:section_generating_witnesses}
 
-We can prove that a release broke semver by creating a \say{witness},
+The fact that a release broke semver can be proven by a \say{witness},
 which consists of two small crates:
 \begin{itemize}
 	\item a \say{baseline} -- a crate which uses the old release as a dependency
