--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -849,7 +849,7 @@ which consists of two small crates:
 	\item a \say{baseline} -- a crate which uses the old release as a dependency
 		and compiles fine,
 	\item a \say{current} -- a crate which uses the new release as a dependency
-		and doesn't compile,
+		and does not compile.
 \end{itemize}
 Both crates have to have the same code (same \texttt{src/lib.rs} file),
 but different manifests.
