--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -853,7 +853,7 @@ which consists of two small crates:
 \end{itemize}
 Both crates must have exactly the same code (same \texttt{src/lib.rs} file),
 but different manifests.
-Thus, a witness is just three short files -- a source code that uses the item that
+Thus, a witness is made of just three short files -- a source code that uses the item that
 broke semver and two manifests that only differs in the \texttt{[dependency]} section
 (they have the same crate name as a dependency, but a different version).
 
