--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -855,7 +855,7 @@ Both crates must have exactly the same code (same \texttt{src/lib.rs} file),
 but different manifests.
 Thus, a witness is made of just three short files -- a source code that uses the item that
 broke semver and two manifests that only differ in the \texttt{[dependency]} section
-(they have the same crate name as a dependency, but a different version).
+(they have the same crate name as a dependency, but two different versions of it).
 
 The output of each lint in cargo-semver-checks contains a list of importable paths
 of items that triggered the given lint, which is enough to construct some of the witnesses.
