--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -858,7 +858,7 @@ broke semver and two manifests that only differ in the \texttt{[dependency]} sec
 (they have the same crate name as a dependency, but two different versions of it).
 
 The output of each lint in cargo-semver-checks contains a list of importable paths
-of items that triggered the given lint, which is enough to construct some of the witnesses.
+of items that it was triggered by, which is enough to construct some of the witnesses automatically.
 
 For example, after parsing the output of the \texttt{enum\_variant\_missing} lint,
 we got the importable path of the enum and the variant name of it that was removed.
